--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+* {
   text-align: center;
 }
 
@@ -35,4 +35,37 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container{
+  margin-top: 100px;
+}
+
+.input_container{
+  margin: 10px;
+}
+
+input{
+  height: 30px;
+  width:20%;
+  font-size: 18px;
+}
+
+button{
+  height: 30px;
+  width: 10%;
+  background-color: rgb(95, 147, 229);
+}
+
+.logout_btw{
+  background-color: #ad2121;
+  color: aliceblue;
+  margin-right: 5px;
+  font-weight: 250;
+}
+
+.delete_btw{
+  background-color: #a5977a;
+  margin-right: 5px;
+  font-weight: 250;
 }
